# XPlaneUtilities

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  XPlaneUtilities.vcxproj  XPlaneUtilities.vcxproj.filters  vcpkg.json
.github/workflows/: build.yml
cmake/: XPlaneUtilitiesConfig.cmake.in
docs/: api.md
include/XPlaneUtilities/: DataRefAccess.h  DataRefExport.h  DataRefImport.h  FlightDataProvider.h  MenuHandler.h  XPlaneLog.h  XPlaneUtilities.h
src/: DataRefAccess.cpp  DataRefExport.cpp  DataRefImport.cpp  FlightDataProvider.cpp  MenuHandler.cpp  XPlaneLog.cpp
